# vote-talk

./: .dockerignore  .gitignore  Dockerfile  README.md  database.py  docker-compose.yml  main.py  polls.db  pyproject.toml
app/: __init__.py  database.py  main.py  security.py
app/controllers/: poll_controller.py
app/db/: connection.py
app/models/: poll.py
app/routes/: poll_routes.py
app/services/: poll_service.py
app/static/css/: base.css  utilities.css
app/static/css/components/: button.css  card.css  form.css  typography.css
app/static/js/: auth.js
app/templates/: admin.html  base.html  create_poll.html  index.html  login.html  vote.html
static/css/components/: button.css  card.css  form.css
